WebApp/k8s/environments/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sponspay-prod
  labels:
    name: sponspay-prod
