WebApp/k8s/environments/prod/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: sponspay-webapp-service
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "prod-sponspay-webapp-config"}'
spec:
  type: NodePort
