WebApp/k8s/environments/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sponspay-webapp-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: prod-sponspay-ip
    networking.gke.io/managed-certificates: sponspay-webapp-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: prod-sponspay-webapp-service
      port:
        number: 80
